fdo#40874: make recorded border macros run:

When the new BorderLine2 struct with its added members was introduced,
the PutValues methods that are called by the macro recorder with
seqeunces of Anys were not adapted, so running recorded macro for
".uno:BorderInner" ".uno:BorderOuter" ".uno:SetBorderStyle" fails.
(regression from b624e6e6cf2ecfc6e6e983af45212fce5e731006,
7db30f7aa037f52eb07cbb4fd2796bd869204af8)

Change-Id: Icd8a11d7f5c8d79c57020f213a1554540b6c666d